syntax = "proto3";

option go_package = "/api/proto";

message Link {
  string url = 1;
  string alias = 2;
}

service LinkService {
  rpc CreateLink(CreateLinkRequest) returns (CreateLinkResponse) {};
  rpc GetLink(GetLinkRequest) returns (GetLinkResponse) {};
}

message CreateLinkRequest {
  string url = 1;
}

message GetLinkRequest{
  string alias = 1;
}

message CreateLinkResponse {
  string alias = 1;
}

message GetLinkResponse {
  string url = 1;
}